--- a/index.html
+++ b/index.html
@@ -16,9 +16,13 @@
 		
 			<label>Track: 
 				<select id="trackSelect">
-					<option value="media/New Adventure Theme.mp3" selected>New Adventure Theme</option>
+                    <option value="media/Lake Shore Drive - Aliotta Haynes Jeremiah.mp3">Lake Shore Drive</option>
+                    <option value="media/My Chemical Romance - Teenagers.mp3" selected>Teenagers</option>
+					<option value="media/New Adventure Theme.mp3">New Adventure Theme</option>
 					<option value="media/Peanuts Theme.mp3">Peanuts Theme</option>
 					<option value="media/The Picard Song.mp3">The Picard Song</option>
+
+                    
 				</select>
 			</label>
 		</section>
@@ -34,7 +38,6 @@
             <!-- we'll use this 4th checkbox soon! -->
             <span><input type="checkbox" id="noiseCB"><label for="noiseCB">Show Noise</label></span>
              <span><input type="checkbox" id="invertCB"><label for="invertCB">Show Invert</label></span>
-             <span><input type="checkbox" id="embossCB"><label for="embossCB">Show Emboss</label></span>
         </section>
 	</div>
 </main>
